test/tests/stages/15_arrays_and_pointer_arithmetic/invalid_types/compare_pointer_to_int.parse
-- Lexing ... OK
-- Parsing ... OK
+
+
@@ C AST @@
CProgram: 
  List[1]: 
    CFunDecl: 
      CFunctionDeclaration: 
        TIdentifier: main
        List[0]: 
        CB: 
          List[2]: 
            CD: 
              CVarDecl: 
                CVariableDeclaration: 
                  TIdentifier: l
                  CSingleInit: 
                    CConstant: 
                      CConstInt: 
                        TInt: 0
                      None: 
                    None: 
                  Pointer: 
                    Long: 
                  None: 
            CS: 
              CReturn: 
                CBinary: 
                  CLessOrEqual: 
                  CVar: 
                    TIdentifier: l
                    None: 
                  CConstant: 
                    CConstULong: 
                      TULong: 100
                    None: 
                  None: 
        FunType: 
          TULong: 67108864
          TULong: 67108864
          List[0]: 
          Int: 
        None: 
